# mental_health_llm_eval

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: pages.yml
app/: streamlit_app.py
cli/: main.py
docs/: Gemfile  _config.yml  evaluator_prompt.md  index.md  installation.md  prompt_format.md  simple_instructions.md  testing.md
prompts/: prompt_bank.yaml
rubric/: scoring_rubric.yaml
src/: __init__.py  __main__.py  evaluator.py  models.py  models_stub.py  rate_limiter.py  red_flags.py  scorer.py
src/mental_health_llm_eval/: __init__.py  __main__.py  config.py  evaluator.py  exceptions.py  logging_handler.py  rate_limiter.py  red_flags.py  scorer.py  scoring.py  validation.py
src/mental_health_llm_eval/model_backends/: __init__.py  anthropic_backend.py  huggingface_backend.py  mock_backend.py  openai_backend.py
src/model_backends/: custom_backend.py
tests/: test_evaluator.py  test_logging_handler.py  test_rate_limiter.py  test_red_flags.py  test_scorer.py  test_validation.py
tests/integration/: test_mock_backend.py
